Commit per frontend

--- a/src/main/resources/templates/admin/aggiungiBuffetAlloChef.html
+++ b/src/main/resources/templates/admin/aggiungiBuffetAlloChef.html
@@ -4,16 +4,17 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Aggiungi buffet allo chef</title>
+	<link rel="stylesheet" href="/css/buffet.css" />
 </head>
 
 <body>
 	<div>
-		<h4>Aggiungi un buffet a quelli proposti dallo chef</h4>
+		<h1>Aggiungi un buffet a quelli proposti dallo chef</h1>
 		<span th:if="${buffets.isEmpty()}">Non ci sono buffet da poter aggiungere!</span>
 		<form th:unless="${buffets.isEmpty()}" th:action="@{'/admin/addBuffetToChef' + '/' + ${chef.id}}" method="POST" th:object="${buffet}">
 			<div>
 				<div>
-					<span><label for="seleziona-buffet">Scegli un buffet tra quelli presenti nell'elenco:</label><span>
+					<span><label for="seleziona-buffet">Scegli un buffet tra quelli presenti nell'elenco</label><span>
 							<span><select name="buffet" id="seleziona-buffet">
 									<option disabled=true>--Per favore, scegli un buffet--</option>
 									<option th:each="b : ${buffets}" th:text="${b.nome}" th:value="${b.id}">
@@ -28,13 +29,13 @@
 	</div>
 	<footer>
 		<div>
-			<a href="/admin/chefs">Elenco chef</a>
+			<a href="/admin/chefs">Torna all'elenco degli chef</a>
 		</div>
 		<div>
-			<a href="/menu">Menù amministratore</a>
+			<a href="/menu">Torna al menù amministratore</a>
 		</div>
 		<div>
-			<a href="/">Home</a>
+			<a href="/">Torna alla home</a>
 		</div>
 	</footer>
 </body>
