--- a/src/main/resources/templates/admin/piatto.html
+++ b/src/main/resources/templates/admin/piatto.html
@@ -4,55 +4,67 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Dettagli piatto</title>
+	<link rel="stylesheet" href="/css/buffet.css" />
 </head>
 
 <body>
 	<div>
-		<h4>Dettagli piatto</h4>
+		<h1>Dettagli piatto</h1>
+		<img src="/images/piatto.jpg" alt="A course" width="70%" />
+		<p>
 		<div>
-			<span>Nome: </span><span th:text="${piatto.nome}">Piatto</span>
+			<!-- <span>Nome: </span> -->
+			<strong th:text="${piatto.nome}">Piatto</strong>
 		</div>
 		<div>
-			<span>Descrizione: </span>
-			<span th:if="${!piatto.descrizione.isEmpty()}" th:text="${piatto.descrizione}">Prova</span>
-			<span th:unless="${!piatto.descrizione.isEmpty()}">Non disponibile</span>
+			<!-- <span>Descrizione: </span> -->
+			<em th:unless="${piatto.descrizione.isEmpty()}" th:text="${piatto.descrizione}">Prova</em>
 		</div>
 		<div>
-			<span>Elenco dei buffet in cui è presente questo piatto: </span>
-			<span th:if="${buffets.isEmpty()}">L'elenco non è disponibile</span>
-			<ul>
-				<li th:each="buffet : ${buffets}">
-					<a th:if="${buffet != null}" href="/admin/buffet.html"
-						th:href="@{'/admin/buffet' + '/' + ${buffet.id}}" th:text="${buffet.nome}">Buffet di prova</a>
-				</li>
-			</ul>
+			<p>
+				<span th:if="${buffets.isEmpty()}">in lavorazione</span>
+			<table>
+				<thead th:unless="${buffets.isEmpty()}">Elenco dei buffet in cui è presente questo piatto: </thead>
+				<tr th:each="buffet : ${buffets}">
+					<td><a th:if="${buffet != null}" href="/admin/buffet.html"
+							th:href="@{'/admin/buffet' + '/' + ${buffet.id}}" th:text="${buffet.nome}">Buffet di
+							prova</a></td>
+				</tr>
+			</table>
+			</p>
 		</div>
 		<div>
-			<span>Elenco degli ingredienti: </span>
-			<span th:if="${ingredienti.isEmpty()}">L'elenco non è disponibile</span>
-			<ul>
-				<li th:each="ingrediente : ${ingredienti}">
-					<a th:if="${ingrediente != null}" href="/admin/ingrediente.html"
-						th:href="@{'/admin/ingrediente' + '/' + ${ingrediente.id}}" th:text="${ingrediente.nome}">Ingrediente di prova</a>
-					<a th:href="@{'/admin/toRemoveIngrediente' + '/' + ${ingrediente.id} + '/From/' + ${piatto.id}}" th:text="Rimuovi">Rimuovi</a>
-				</li>
-			</ul>
+			<p>
+				<!-- <span th:if="${ingredienti.isEmpty()}">attualmente non disponibile</span> -->
+			<table>
+				<thead th:unless="${ingredienti.isEmpty()}">Elenco degli ingredienti: </thead>
+				<tr th:each="ingrediente : ${ingredienti}">
+					<td><a th:if="${ingrediente != null}" href="/admin/ingrediente.html"
+							th:href="@{'/admin/ingrediente' + '/' + ${ingrediente.id}}"
+							th:text="${ingrediente.nome}">Ingrediente di prova</a></td>
+					<td><a class="button"
+							th:href="@{'/admin/toRemoveIngrediente' + '/' + ${ingrediente.id} + '/From/' + ${piatto.id}}"
+							th:text="Rimuovi">Rimuovi</a></td>
+				</tr>
+			</table>
+			<p>
 		</div>
+		</p>
 		<div>
-			<a href="/admin/aggiungiIngredienteAlPiatto.html" th:href="@{'/admin/addIngredienteToPiatto' + '/' + ${piatto.id}}"
-				th:text="Aggiungi + ' ' + un + ' ' + ingrediente + ' ' + allelenco + ' ' + degli + ' ' + ingredienti + ' ' + di + ' ' + questo + ' ' + piatto">Aggiungi
-				ingrediente</a>
+			<a href="/admin/aggiungiIngredienteAlPiatto.html"
+				th:href="@{'/admin/addIngredienteToPiatto' + '/' + ${piatto.id}}">Aggiungi un ingrediente all'elenco
+				degli ingredienti di questo piatto</a>
 		</div>
 	</div>
 	<footer>
 		<div>
-			<a href="/admin/piatti">Elenco piatti</a>
+			<a href="/admin/piatti">Torna all'elenco dei piatti</a>
 		</div>
 		<div>
-			<a href="/menu">Menù amministratore</a>
+			<a href="/menu">Torna al menù amministratore</a>
 		</div>
 		<div>
-			<a href="/">Home</a>
+			<a href="/">Torna alla home</a>
 		</div>
 	</footer>
 </body>
