--- a/src/main/resources/templates/user/registrationSuccessful.html
+++ b/src/main/resources/templates/user/registrationSuccessful.html
@@ -4,17 +4,18 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Conferma registrazione</title>
+	<link rel="stylesheet" href="/css/index.css" />
 </head>
 
 <body>
 	<div>
-		<h4>Registrazione</h4>
-		<h1>Congratulazioni, ti sei registrato!</h1>
+		<h1>Registrazione</h1>
+		<h2>Congratulazioni, ti sei registrato!</hh2>
 	</div>
 	<footer>
-		<div>
-			<a href="/">Home</a>
-		</div>
+		<p>
+			<a href="/">Torna alla home</a>
+		</p>
 	</footer>
 </body>
 
