--- a/src/main/resources/templates/admin/buffet.html
+++ b/src/main/resources/templates/admin/buffet.html
@@ -4,52 +4,62 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Dettagli buffet</title>
+	<link rel="stylesheet" href="/css/buffet.css" />
 </head>
 
 <body>
 	<div>
-		<h4>Dettagli buffet</h4>
+		<h1>Dettagli buffet</h1>
+		<img src="/images/buffet.jpg" alt="A buffet" width="70%" />
+		<p>
 		<div>
-			<span>Nome: </span><span th:text="${buffet.nome}">Buffet</span>
+			<!-- <span>Nome: </span> -->
+			<strong th:text="${buffet.nome}">Buffet</strong>
 		</div>
 		<div>
-			<span>Descrizione: </span>
-			<span th:if="${!buffet.descrizione.isEmpty()}" th:text="${buffet.descrizione}">Prova</span>
-			<span th:unless="${!buffet.descrizione.isEmpty()}">Non disponibile</span>
+			<!-- <span>Descrizione: </span> -->
+			<em th:unless="${buffet.descrizione.isEmpty()}" th:text="${buffet.descrizione}">Prova</em>
 		</div>
 		<div>
-			<span>Elenco dei piatti: </span>
-			<span th:if="${piatti.isEmpty()}">L'elenco non è disponibile</span>
-			<ul>
-				<li th:each="piatto : ${piatti}">
-					<a th:if="${piatto != null}" href="/admin/piatto.html"
-						th:href="@{'/admin/piatto' + '/' + ${piatto.id}}" th:text="${piatto.nome}">Piatto di prova</a>
-					<a th:href="@{'/admin/toRemovePiatto' + '/' + ${piatto.id} + '/From/' + ${buffet.id}}" th:text="Rimuovi">Rimuovi</a>
-				</li>
-			</ul>
+			<p>
+				<span th:if="${piatti.isEmpty()}">in lavorazione</span>
+			<table>
+				<thead th:unless="${piatti.isEmpty()}">Elenco dei piatti: </thead>
+				<tr th:each="piatto : ${piatti}">
+					<td><a th:if="${piatto != null}" href="/admin/piatto.html"
+							th:href="@{'/admin/piatto' + '/' + ${piatto.id}}" th:text="${piatto.nome}">Piatto di
+							prova</a></td>
+					<td><a class="button"
+							th:href="@{'/admin/toRemovePiatto' + '/' + ${piatto.id} + '/From/' + ${buffet.id}}"
+							th:text="Rimuovi">Rimuovi</a></td>
+				</tr>
+			</table>
+			</p>
 		</div>
-		<div>
-			<span>Proposto dallo chef: </span>
+		</p>
+		<p>
+			<span th:if="${buffet.chef != null}">Proposto dallo chef </span>
 			<a th:if="${buffet.chef != null}" href="/admin/chef.html"
 				th:href="@{'/admin/chef' + '/' + ${buffet.chef.id}}"
 				th:text="${buffet.chef.nome} + ' ' + ${buffet.chef.cognome}">Chef</a>
-			<span th:unless="${buffet.chef != null}">Non disponibile</span>
-		</div>
+			<!-- <span th:unless="${buffet.chef != null}">attualmente non disponibile</span> -->
+		</p>
+
 		<div>
-			<a href="/admin/aggiungiPiattoAlBuffet.html" th:href="@{'/admin/addPiattoToBuffet' + '/' + ${buffet.id}}"
-				th:text="Aggiungi + ' ' + un + ' ' + piatto + ' ' + allelenco + ' ' + dei + ' ' + piatti + ' ' + di + ' ' + questo + ' ' + buffet">Aggiungi
-				piatto</a>
+			<a href="/admin/aggiungiPiattoAlBuffet.html"
+				th:href="@{'/admin/addPiattoToBuffet' + '/' + ${buffet.id}}">Aggiungi un piatto all'elenco dei piatti di
+				questo buffet</a>
 		</div>
 	</div>
 	<footer>
 		<div>
-			<a href="/admin/buffets">Elenco buffet</a>
+			<a href="/admin/buffets">Torna all'elenco dei buffet</a>
 		</div>
 		<div>
-			<a href="/menu">Menù amministratore</a>
+			<a href="/menu">Torna al menù amministratore</a>
 		</div>
 		<div>
-			<a href="/">Home</a>
+			<a href="/">Torna alla home</a>
 		</div>
 	</footer>
 </body>
