--- a/src/main/resources/templates/admin/confermaCancellazionePiatto.html
+++ b/src/main/resources/templates/admin/confermaCancellazionePiatto.html
@@ -4,36 +4,38 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Conferma cancellazione piatto</title>
+	<link rel="stylesheet" href="/css/buffet.css" />
 </head>
 
 <body>
 	<div>
-		<h4>Piatto da cancellare:</h4>
+		<h1>Piatto da cancellare</h1>
+		<img src="/images/piatto.jpg" alt="A course" width="70%" />
+		<p>
 		<div>
-			<div>
-				<span>Nome: </span><span th:text="${piatto.nome}">Piatto</span>
-			</div>
-			<div>
-				<span>Descrizione: </span>
-				<span th:if="${!piatto.descrizione.isEmpty()}" th:text="${piatto.descrizione}">Prova</span>
-				<span th:unless="${!piatto.descrizione.isEmpty()}">Non disponibile</span>
-			</div>
+			<!-- <span>Nome: </span> -->
+			<strong th:text="${piatto.nome}">Piatto</strong>
 		</div>
 		<div>
+			<!-- <span>Descrizione: </span> -->
+			<em th:unless="${piatto.descrizione.isEmpty()}" th:text="${piatto.descrizione}">Prova</em>
+		</div>
+		</p>
+		<p>
 			<strong>Confermi di voler cancellare questo piatto?</strong>
-			<a href="admin/piatti.html" th:href="@{'/admin/confirmDeletePiatto'+ '/' + ${piatto.id}}"
+			<a class="button" href="admin/piatti.html" th:href="@{'/admin/confirmDeletePiatto'+ '/' + ${piatto.id}}"
 				th:text="Conferma">Conferma</a>
-		</div>
+		</p>
 	</div>
 	<footer>
 		<div>
-			<a href="/admin/piatti">Elenco piatti</a>
+			<a href="/admin/piatti">Torna all'elenco dei piatti</a>
 		</div>
 		<div>
-			<a href="/menu">Menù amministratore</a>
+			<a href="/menu">Torna al menù amministratore</a>
 		</div>
 		<div>
-			<a href="/">Home</a>
+			<a href="/">Torna alla home</a>
 		</div>
 	</footer>
 </body>
