--- a/src/main/resources/templates/admin/ingredienti.html
+++ b/src/main/resources/templates/admin/ingredienti.html
@@ -4,28 +4,33 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Elenco ingredienti</title>
+	<link rel="stylesheet" href="/css/buffet.css" />
 </head>
 
 <body>
 	<div>
-		<h4>Elenco ingredienti:</h4>
-		<ul>
-			<li th:each="ingrediente : ${ingredienti}">
-				<a href="admin/ingrediente.html" th:href="@{'/admin/ingrediente' + '/' + ${ingrediente.id}}"
-					th:text="${ingrediente.nome}">Ingrediente di prova</a>
-				<!--- <a href="confermaCancellazioneIngrediente.html" th:href="@{'/admin/toDeleteIngrediente' + '/' + ${ingrediente.id}}"
-					th:text="Cancella">Cancella</a> -->
-				<a href="confermaCancellazioneIngrediente.html" th:href="@{'/admin/toDeleteIngrediente' + '/' + ${ingrediente.id}}"
-					th:text="Cancella">Cancella</a>
-			</li>
-		</ul>
+		<h1>Elenco ingredienti</h1>
+		<img src="/images/ingrediente.jpg" alt="Some ingredients" width="70%" />
+		<p>
+		<table>
+		<thead th:unless="${ingredienti.isEmpty()}">INGREDIENTI</thead>
+			<tr th:each="ingrediente : ${ingredienti}">
+				<td><a href="admin/ingrediente.html" th:href="@{'/admin/ingrediente' + '/' + ${ingrediente.id}}"
+					th:text="${ingrediente.nome}">Ingrediente di prova</a></td>
+				<!--- <td><a href="confermaCancellazioneIngrediente.html" th:href="@{'/admin/toDeleteIngrediente' + '/' + ${ingrediente.id}}"
+					th:text="Cancella">Cancella</a></td> -->
+				<td><a class="button" href="confermaCancellazioneIngrediente.html" th:href="@{'/admin/toDeleteIngrediente' + '/' + ${ingrediente.id}}"
+					th:text="Cancella">Cancella</a></td>
+			</tr>
+		</table>
+		</p>
 	</div>
 	<footer>
 		<div>
-			<a href="/menu">Menù amministratore</a>
+			<a href="/menu">Torna al menù amministratore</a>
 		</div>
 		<div>
-			<a href="/">Home</a>
+			<a href="/">Torna alla home</a>
 		</div>
 	</footer>
 </body>
