--- a/src/main/resources/templates/user/ingredienti.html
+++ b/src/main/resources/templates/user/ingredienti.html
@@ -4,24 +4,29 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Elenco ingredienti</title>
+	<link rel="stylesheet" href="/css/user.css" />
 </head>
 
 <body>
 	<div>
-		<h4>Elenco ingredienti:</h4>
-		<ul>
-			<li th:each="ingrediente : ${ingredienti}">
-				<a href="user/ingrediente.html" th:href="@{'/user/ingrediente' + '/' + ${ingrediente.id}}"
-					th:text="${ingrediente.nome}">Ingrediente di prova</a>
-			</li>
-		</ul>
+		<h1>Elenco ingredienti</h1>
+		<img src="/images/ingrediente.jpg" alt="Some ingredients" width="70%" />
+		<p>
+		<table>
+			<thead th:unless="${ingredienti.isEmpty()}">INGREDIENTI</thead>
+			<tr th:each="ingrediente : ${ingredienti}">
+				<td><a href="user/ingrediente.html" th:href="@{'/user/ingrediente' + '/' + ${ingrediente.id}}"
+					th:text="${ingrediente.nome}">Ingrediente di prova</a></td>
+			</tr>
+		</table>
+		</p>
 	</div>
 	<footer>
 		<div>
-			<a href="/menu">Menù amministratore</a>
+			<a href="/menu">Torna al menù utente</a>
 		</div>
 		<div>
-			<a href="/">Home</a>
+			<a href="/">Torna alla home</a>
 		</div>
 	</footer>
 </body>
